@@ -1,9 +1,10 @@
 package br.com.api.flow.state.item;
 
-import static br.com.api.exceptions.FindByFilterExceptionEnum.MORE_THAN_ONE_REGISTER_FOUND;
+import static br.com.api.exceptions.FindByFilterExceptionEnum.MORE_THAN_ONE_matriculation_FOUND;
 
 import java.lang.reflect.InvocationTargetException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
@@ -32,18 +33,18 @@ public class FindStateByFilterFlowItem {
 		if (Boolean.TRUE.equals(filter.getPageable())) {
 			Page<State> entities = stateRepositoryImpl.findByFilter(filter,
 					PageRequest.of(filter.getCurrentPage(), filter.getSizePage()));
-			
+
 			filter.setResult(entities.map(entity -> stateMapper.toDTO(entity)).toList());
 			filter.setTotal(Math.toIntExact(entities.getTotalElements()));
 			filter.setTotalPages(Math.toIntExact(entities.getTotalPages()));
 			filter.setLast(entities.isLast());
 		} else {
-			List<State> entities = stateRepositoryImpl.findByFilter(filter);			
-			filter.setResult(entities.stream().map(entity -> stateMapper.toDTO(entity)).toList());
+			List<State> entities = stateRepositoryImpl.findByFilter(filter);
+			filter.setResult(entities.stream().map(entity -> stateMapper.toDTO(entity)).collect(Collectors.toList()));
 		}
 
 		if (Boolean.TRUE.equals(filter.getResultUnique()) && filter.getResult().size() > 1) {
-			throw new FindByFilterException(MORE_THAN_ONE_REGISTER_FOUND);
+			throw new FindByFilterException(MORE_THAN_ONE_matriculation_FOUND);
 		}
 
 		return filter;
